# rooster

./: .env-sample  .gitignore  .travis.yml  Dockerfile  README.md  manage.py  pyproject.toml  tasks.py  zappa_callbacks.py  zappa_settings.json.enc
.github/workflows/: ci.yml
githubapi/: api.py  apps.py  events.py
githubapi/tests/: test_api.py
jiraapi/: api.py  apps.py
jiraapi/tests/: test_api.py
profile/: models.py  serializers.py  views.py
profile/migrations/: 0001_add_user_settings.py
profile/templates/: dashboard.html  profile.html  settings.html
profile/tests/: factories.py  test_serializers.py  test_views.py
rooster/: factories.py  settings.py  urls.py  wsgi.py
static/css/: rooster.css  rooster.css.map
templates/: base.html
