[tool.poetry]
name = "rooster"
version = "0.1.0"
description = "A tool to review activity on GitHub for daily standup."
authors = ["Lucas Connors <lucas@revolutiontech.ca>"]
license = "ISC"

[tool.poetry.dependencies]
python = "^3.8"
Django = "~3.0"
python-dotenv = "^0.14.0"
django-configurations = "^2.2"
social-auth-app-django = "^4.0"
PyGithub = "^1.51"
zappa = "^0.51"
django-s3-sqlite = "^0.0.3"
django-s3-storage = "^0.13.3"
jira = "^2.0"
django-cryptography = "^1.0"
djangorestframework = "^3.11.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pyupgrade = "^2.7"
coverage = "^5.2"
factory-boy = "^2.12"
isort = "^5.2.2"

[tool.isort]
# https://github.com/psf/black/blob/master/docs/compatible_configs.md#isort
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.black]
line-length = 88
target_version = ["py38"]

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
