[tool.poetry]
name = "rooster"
version = "0.1.0"
description = "A tool to review activity on GitHub for daily standup."
authors = ["Lucas Connors <lucas@revolutiontech.ca>"]
license = "ISC"

[tool.poetry.dependencies]
python = "^3.8"
Django = "~3.1"
python-dotenv = "^0.15.0"
django-configurations = "^2.2"
social-auth-app-django = "^4.0"
PyGithub = "^1.54"
zappa = "^0.52"
django-s3-sqlite = "^0.0.3"
django-s3-storage = "^0.13.4"
jira = "^2.0"
django-cryptography = "^1.0"
djangorestframework = "^3.12.2"

[tool.poetry.dev-dependencies]
coverage = "^5.5"
factory-boy = "^3.2"
opstrich = "^0.3.1"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
target_version = ["py38"]

[build-system]
requires = ["poetry>=1.1"]
build-backend = "poetry.masonry.api"
