[tool.poetry]
name = "rooster"
version = "0.1.0"
description = "A tool to review activity on GitHub for daily standup."
authors = ["Lucas Connors <lucas@revolutiontech.ca>"]
license = "ISC"

[tool.poetry.dependencies]
python = "^3.8"
Django = "~3.2"
python-dotenv = "^0.19.0"
django-configurations = "^2.2"
social-auth-app-django = "^5.0"
PyGithub = "^1.55"
zappa = { git = "https://github.com/zappa/Zappa.git", rev = "89e99174ded0abdcbc5740c57c25baf93e55d468" }
django-s3-sqlite = "^0.0.3"
django-s3-storage = "^0.13.4"
jira = "^3.0"
django-cryptography = "^1.0"
djangorestframework = "^3.12.4"

[tool.poetry.dev-dependencies]
coverage = "^5.5"
factory-boy = "^3.2"
opstrich = "^0.6.0"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
target_version = ["py38"]

[build-system]
requires = ["poetry>=1.1"]
build-backend = "poetry.masonry.api"
